# odre-python

./: .gitignore  CITATION.cff  README.md  odre.py  pyproject.toml  python_interpreter.py  report.html  setup.py
pyodre/: context.py  interpreters.py  odre.py  python_functions.py  python_interpreter.py
test/: test_odre.py  test_odre_basic.py  test_odre_issues.py
test/policices/basic-experiments/: 1-policy_constant_lt.json  10-policy_datetime_neq.json  11-policy_datetime_gteq.json  12-policy_datetime_gt.json  13-policy_extension_operand_lt.json  14-policy_extension_operand_lteq.json  15-policy_extension_operand_eq.json  16-policy_extension_operand_neq.json  17-policy_extension_operand_gteq.json  18-policy_extension_operand_gt.json  19-policy_extension_operator.json  2-policy_constant_lteq.json  20-policy_extension_action.json  21-jinja-policy_interpolation_variable_left_eq.json  22-jinja-policy_interpolation_variable_right_eq.json  23-jinja-policy_interpolation_function_left_eq.json  24-jinja-policy_interpolation_function_right_eq.json  3-policy_constant_eq.json  4-policy_constant_neq.json  5-policy_constant_gteq.json  6-policy_constant_gt.json  7-policy_datetime_lt.json  8-policy_datetime_lteq.json  9-policy_datetime_eq.json  running.csv
test/policices/github_issues/: issue1-policy.json
