[build-system]
requires=["hatchling"]
build-backend="hatchling.build"
[project]
name="pyodre"
version = "0.0.1"
authors = [
    { name = "Andrea Cimmino", email="andreajesus.cimmino@upm.es"}
]
description="Open Digital Rights Enforcement Framework python implementation"
readme = "README.md"
license = {file= "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
"Homepage" = "https://github.com/ODRE-Framework/odre-python"
"Bug Tracker" = "https://github.com/ODRE-Framework/odre-python/issues"